testsuite/tests/dependent/should_fail/SelfDep.hs
{-# LANGUAGE KindSignatures #-}

module SelfDep where

data T :: T -> *
